#ifndef PUZZLE_SOLVER_H
#define PUZZLE_SOLVER_H

class PuzzleSolver {

};

#endif  // PUZZLE_SOLVER_H
